[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/graphics/Bullet1.png" type="Texture" id=1]
[ext_resource path="res://scripts/Bullet.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 28.0713

[sub_resource type="CircleShape2D" id=2]
radius = 26.6667

[node name="Bullet" type="KinematicBody2D"]
scale = Vector2( 0.2, 0.2 )
z_index = 20
collision_layer = 3
collision_mask = 3
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 0, 1.90735e-06 )
scale = Vector2( 1.5, 1.45 )

[node name="BulletArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="BulletArea"]
shape = SubResource( 2 )

[node name="LifetimeTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionSparkles" type="CPUParticles2D" parent="."]
visible = false
position = Vector2( 0, 40 )
z_index = 20
amount = 200
lifetime = 2.0
speed_scale = 2.0
emission_shape = 1
emission_sphere_radius = 95.18
flag_align_y = true
direction = Vector2( 0, -1 )
gravity = Vector2( 0, 2 )
initial_velocity = 40.82
radial_accel = 43.88
angle = 10.0
scale_amount = 6.0
anim_speed = 33.96

[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="body_entered" from="BulletArea" to="." method="_on_BulletArea_body_entered"]
[connection signal="timeout" from="LifetimeTimer" to="." method="_on_LifetimeTimer_timeout"]
